--- a/javascript.html
+++ b/javascript.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Basics</title>
+    <script src="jsbasics.js"></script>
 </head>
 
 <body>
